GPT/game/playbook_football_lab/v013/README.md
# Playbook Football Lab v013

PlayMaker Football 的な「プレーを作って結果を見る」面白さを、現代的な戦術盤 UI に寄せた最小プロトタイプ。

## 起動

`index.html` をブラウザで開く。

## 操作

- `1` から `3`: プレー選択
- `Space`: スナップ
- `R`: 初期化
- `P`: 一時停止/再開
- `L`: 直前プレーをリプレイ
- `,` / `.`: リプレイを1フレーム戻す/進める
- `Edit routes`: WR / TE / RB のルート点をドラッグ
- `Add point`: ルート線付近をクリックして中間点を追加
- `Throw timing`: QB が投げる時刻を調整
- `0.45x / 1x / 1.45x`: プレー速度を変更

## v013 の狙い

v012 でブロック品質は入ったが、結果はまだ「止まる/減速する」に寄っていた。v013 では接触結果を `drive`、`shed`、`holding`、`engaged` に分け、良い押し込みと悪い絡み方を区別する。

## 実装範囲

- オフェンス5人、ディフェンス5人
- 3種類のプリセットプレー
- ルート中間点の追加とドラッグ編集
- 守備コール3種類
- 守備予想と実際の守備の照合
- スカウトレポート
- カウンター相性ボーナス
- 同じプレー連打ペナルティ
- Coach score
- QB接触時は投球せずサック、接触寸前の投球は hit-as-thrown として捕球判定に強いペナルティ
- 選手表示は丸型に戻し、向きは前方ノッチと腕/足の線で示す
- OL3人とラッシャーの簡易ブロック
- ポケット幅の表示
- ポケット崩壊時の捕球窓ペナルティ
- 50サイクル分の自律改善ログ
- 接触ペナルティとポケット崩壊ペナルティのログ分離
- 速度切り替えと一時停止
- 直前プレーのフレーム記録と `Replay` / `L` キー再生
- リプレイスライダー、`-1` / `+1` ボタン、`,` / `.` キーのコマ送り
- サック、崩れた投球、捕球、タックルなどのリプレイイベントマーカー
- Draw Screen 時の H パスプロ/スクリーンリリース
- H のリリース前ターゲット抑制と、Blitz相手のリリース後スクリーン評価ボーナス
- H のチップブロック表示
- Draw Screen 捕球後の LT/C/RT 前方リード
- スクリーン壁に近い守備者の追跡減速
- スクリーン壁/ピック状態の表示と snapshot
- ブロック接触品質 `blockQuality`
- 体の向き/前後関係を使うパスプロとスクリーン壁判定
- blockQuality に応じたリング太さと HUD 表示
- ブロック結果 `drive / shed / holding / engaged`
- holding の Coach score ペナルティ
- ブロック結果の HUD / snapshot / replay 保存
- サック、崩れた投球、パス、捕球、インコンプリート、タックルのフィールド上バナー
- デバッグ snapshot の速度/停止/バナー/リプレイ状態、現在フレーム、イベントマーカー、スクリーン状態
- 投球タイミング調整
- デフォルトでは約2.2秒で投げ、飛球も0.75秒以上かけるため、プレー全体を観察できる
- 捕球成功時は即終了せず、`CATCH` 表示後にキャッチ後ランを行い、守備が詰めた時点でタックル終了する
- パス失敗時は結果カードに `incomplete` と原因守備者を表示する
- 選手は向き、旋回、カット、バックペダルの簡易モデルを持つ
- QB の自動ターゲット選択
- 捕球成功/失敗と原因ログ
- ダウン、距離、ボール位置の簡易更新
